# AIPPS_L1

./: Reedme 1.1.1.txt  Reedme.txt
Project/: CMakeLists.txt
Project/CMakeBuild/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake  myproj.sln  test.vcxproj  test.vcxproj.filters
Project/CMakeBuild/Libs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  HelloLib.vcxproj  HelloLib.vcxproj.filters  ShapeLib.sln  cmake_install.cmake
Project/Libs/: CMakeLists.txt
Project/Libs/ShapeLib/: ColoredLine.h  ColoredPoint.h  Line.h  Picture.h  Point.h  ReadMe.txt  _ColoredLine.cpp  _Line.cpp  _Picture.cpp  _coloredPoint.cpp
Project/src/: Main.cpp
